--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
-<div class="text-4xl text-blue-500">
-  {{"HELLO" | translate}}
+<app-header></app-header>
+<router-outlet></router-outlet>
+<div id="footer">
+    <app-footer></app-footer>
 </div>
