--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -13,9 +13,9 @@
 
     <div class="fixed left-0 top-4 z-50 md:hidden w-full flex items-center justify-between px-8">
       <!-- <div class="w-[70px] h-[70px] rounded-full"> -->
-      <div class="w-[70px] h-[70px]">
+      <a href="/" class="w-[70px] h-[70px]">
         <img src="logos/ngombe.jpg" alt="logo ngombe" [ngClass]="{'hidden' : isOpen}" class="w-full h-full rounded-full object-cover">
-      </div>
+      </a>
       <button 
         (click)="toggleSidebar()"
         class="hamburger menu-btn-side" 
