--- a/src/app/components/service/service.component.html
+++ b/src/app/components/service/service.component.html
@@ -1,24 +1,24 @@
-<div class="container mx-auto p-6 bg-gray-50 min-h-screen">
+<div class="md:container md:mx-auto md:p-6 bg-gray-50 min-h-screen">
 <!-- Conditional rendering -->
-  <div *ngIf="service">
+  <div *ngIf="service" class="pt-28 md:pt-0">
     <!-- Title Section -->
     <div class="text-center mb-6">
       <h1 class="text-5xl font-extrabold text-gray-900 mb-4">{{ service.title }}</h1>
-      <p class="text-lg text-gray-600">Explore the details of our premium service offering.</p>
+      <p class="text-lg text-gray-600">Explorez les details de services que nous proposons</p>
     </div>
 
     <!-- Image Section -->
-    <div class="mb-6 w-full h-[70vh] relative">
-      <div class="absolute  top-0 left-0 w-full h-full z-30 opacity-50 bg-gradient-to-r from-gray-500 via-gray-700 to-gray-900 text-white p-8 rounded-lg shadow-lg "></div>
+    <div class="mb-6 w-full h-[30vh] md:h-[70vh] relative">
+      <div class="absolute top-0 left-0 w-full h-full z-30 opacity-50 bg-gradient-to-r from-gray-500 via-gray-700 to-gray-900 text-white p-8 md:rounded-lg shadow-lg "></div>
       <img 
         [src]="service.image" 
         [alt]="service.title" 
-        class="absolute w-full h-full object-cover top-0 left-0 rounded-lg shadow-lg border-2 border-gray-200 hover:border-gray-300 transition duration-300"
+        class="absolute w-full h-full object-cover top-0 left-0 md:rounded-lg shadow-lg border-2 border-gray-200 hover:border-gray-300 transition duration-300"
       >
     </div>
 
     <!-- Details Section -->
-    <div class="p-6 bg-white shadow-md rounded-lg">
+    <div class="p-6 bg-white shadow-md md:rounded-lg">
       <h2 class="text-3xl font-semibold text-gray-800 mb-4">Service Details</h2>
       <p class="text-gray-700 my-4">{{service.description}}</p>
       <ul class="list-disc pl-6 text-lg text-gray-700 space-y-2">
