--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -6,7 +6,7 @@
       </a>
       <nav class="space-x-6">
         <a href="#services" class="hover:text-blue-300">Services</a>
-        <a href="#about" class="hover:text-blue-300">À Propos</a>
+        <a href="#contact" class="hover:text-blue-300">À Propos</a>
         <a href="#contact" class="hover:text-blue-300">Contact</a>
       </nav>
     </div>
@@ -36,7 +36,7 @@
       </div>
       <nav class="flex flex-col w-full justify-center items-center mt-8 gap-2">
         <a (click)="toggleSidebar()" href="#services" class="hover:text-blue-300 text-3xl">Services</a>
-        <a (click)="toggleSidebar()" href="#about" class="hover:text-blue-30 text-3xl">À Propos</a>
+        <a (click)="toggleSidebar()" href="#contact" class="hover:text-blue-300 text-3xl">À Propos</a>
         <a (click)="toggleSidebar()" href="#contact" class="hover:text-blue-300 text-3xl">Contact</a>
       </nav>
   </sidebar>
