--- a/src/app/components/our-services/our-services.component.html
+++ b/src/app/components/our-services/our-services.component.html
@@ -1,18 +1,20 @@
 <section class="bg-gray-50 py-16">
-    <div class="container mx-auto px-6 lg:px-20">
+    <div class="container mx-auto md:px-6 lg:px-20">
       <h2 class="text-4xl font-bold text-center text-blue-600 mb-12">
         Nos Services
       </h2>
       <p class="text-center text-gray-600 mb-16">
         Toutes les opérations commerciales, industrielles et financières rattachées directement ou indirectement à notre expertise multisectorielle.
       </p>
-  
+  bg-red
       <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-8">
         <div 
           *ngFor="let service of services" 
-          class="bg-white rounded-xl shadow-lg hover:shadow-2xl p-6 transition hover:-translate-y-2"
+          class="rounded-xl shadow-lg hover:shadow-2xl p-6 transition hover:-translate-y-2"
         >
-          <img [src]="service.image" alt="" class="rounded-xl pb-2">
+          <div class="rounded-xl pb-2 group overflow-hidden">
+            <img [src]="service.image" alt="" class="rounded-xl group-hover:scale-110 transition-transform duration-300">
+          </div>
           <div class="flex items-center mb-4">
             <div 
               class="w-12 h-12 text-white flex items-center justify-center rounded-full shadow-md" 
