--- a/src/app/components/service/service.component.html
+++ b/src/app/components/service/service.component.html
@@ -8,12 +8,12 @@
     </div>
 
     <!-- Image Section -->
-    <div class="mb-6 w-full h-[30vh] md:h-[70vh] relative">
-      <div class="absolute top-0 left-0 w-full h-full z-30 opacity-50 bg-gradient-to-r from-gray-500 via-gray-700 to-gray-900 text-white p-8 md:rounded-lg shadow-lg "></div>
+    <div class="mb-6 w-full h-[30vh] md:h-[70vh] relative overflow-hidden">
+      <div class="absolute peer top-0 left-0 w-full h-full z-30 opacity-50 bg-gradient-to-r from-gray-500 via-gray-700 to-gray-900 text-white p-8 md:rounded-lg shadow-lg "></div>
       <img 
         [src]="service.image" 
         [alt]="service.title" 
-        class="absolute w-full h-full object-cover top-0 left-0 md:rounded-lg shadow-lg border-2 border-gray-200 hover:border-gray-300 transition duration-300"
+        class="absolute peer-hover:scale-125 w-full h-full object-cover top-0 left-0 md:rounded-lg shadow-lg border-2 border-gray-200 hover:border-gray-300 transition duration-900 "
       >
     </div>
 
