updating hero and layout

--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -1,6 +1,10 @@
 <div id="home">
-    <app-hero></app-hero>
+    <app-home></app-home>
 </div>
+
+<!-- <div id="home">
+    <app-hero></app-hero>
+</div> -->
 <div id="services">
     <app-our-services></app-our-services>
 </div>
