updating hero page and adding a cta

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -8,19 +8,17 @@
     <p class="text-xl text-gray-300 italic font-medium text-center">
         Nous et le plus grand nombre
     </p>
-    
-    <!-- Section Header -->
-    <p class="text-blue-600 text-sm font-semibold tracking-wide uppercase">
-        Managed I.T. Solutions
+    <p class="text-blue-600 text-center uppercase text-4xl">
+        Cartographie des processus metiers
     </p>
     
     <!-- Main Heading -->
-    <h1 class="text-7xl text-white max-w-[70%] text-center leading-tight">
+    <h1 class="text-3xl max-w-[98%] text-white text-center leading-tight  md:text-7xl md:max-w-[70%] ">
         Fiable, évolutif et conçu pour votre entreprise.
     </h1>
     
     <!-- Subtext -->
-    <p class="text-white text-lg text-center max-w-[50%]">
+    <p class="text-white text-lg text-center md:max-w-[50%]">
         Des solutions complètes pour tous vos besoins technologiques.
     </p>
     
