--- a/src/app/components/our-services/our-services.component.html
+++ b/src/app/components/our-services/our-services.component.html
@@ -1,3 +1,24 @@
+
+
+<div class="w-full py-[50px]">
+  <section id="cta" 
+      style="background: linear-gradient(to bottom, rgba(0, 0, 255, 0.332), rgba(0, 0, 255, 0.325)), url('/images/business-consulting.jpg') fixed; background-size: cover; background-position: center;" 
+      class="py-28 text-white text-center"
+    >
+    <div class="container mx-auto">
+      <h2 class="text-4xl font-extrabold mb-6">Êtes-vous prêt à transformer votre entreprise ?</h2>
+      <p class="text-xl mb-8">Avec <strong>Ngombe Sarl</strong>, ouvrez la porte à de nouvelles opportunités et faites passer votre entreprise au niveau supérieur.</p>
+      <a href="https://www.cvtheque.ngombe.org" 
+          class="px-10 py-4 rounded-lg bg-blue-600 text-white font-semibold transition duration-500 hover:bg-blue-700 hover:scale-105 transform">
+          Commencez dès maintenant
+      </a>
+    </div>
+  </section>
+</div>
+
+
+
+
 <section class="bg-gray-50 py-16">
     <div class="container mx-auto md:px-6 lg:px-20">
       <h2 class="text-4xl font-bold text-center text-blue-600 mb-12">
@@ -6,7 +27,6 @@
       <p class="text-center text-gray-600 mb-16">
         Toutes les opérations commerciales, industrielles et financières rattachées directement ou indirectement à notre expertise multisectorielle.
       </p>
-  bg-red
       <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-8">
         <div 
           *ngFor="let service of services" 
