--- a/src/styles.scss
+++ b/src/styles.scss
@@ -72,7 +72,7 @@ background: url("../../public/images/app/phone_logo.png");
 .menu-btn-side .hamburger-top,
 .menu-btn-side .hamburger-middle,
 .menu-btn-side .hamburger-bottom{
-background: blue;
+background: white;
 }
 
 .glass {
