updating primary color and hero-section text

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,25 +1,24 @@
 <section id="home_section" class="relative h-screen flex flex-col items-center justify-center bg-cover bg-center gap-1 px-4">
     <!-- Nom de l'entreprise -->
-    <p class="text-lg text-gray-300 italic font-light tracking-wide">
+    <p class="text-xl text-gray-300 italic font-light tracking-wide">
         Ngombe Sarl
     </p>
     
     <!-- Slogan -->
-    <p class="text-xl text-gray-300 italic font-medium text-center">
+    <!-- <p class="text-xl text-gray-300 italic font-medium text-center">
         Nous et le plus grand nombre
-    </p>
-    <p class="text-blue-600 text-center uppercase text-4xl">
-        Cartographie des processus metiers
-    </p>
-    
-    <!-- Main Heading -->
+    </p> -->
+    <p class="text-primary text-center uppercase text-4xl md:text-6xl lg:text-8xl">
+        L'expertise dingénierie des processus d'affaires
+    </p>  
+    <!-- Main Heading
     <h1 class="text-3xl max-w-[98%] text-white text-center leading-tight  md:text-7xl md:max-w-[70%] ">
         Fiable, évolutif et conçu pour votre entreprise.
     </h1>
-    
+     -->
     <!-- Subtext -->
     <p class="text-white text-lg text-center md:max-w-[50%]">
-        Des solutions complètes pour tous vos besoins technologiques.
+        Des solutions complètes pour tous vos besoins.
     </p>
     
     <!-- Call-to-Action Button -->
