--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,13 +1,13 @@
-<header class="bg-blue-600 text-white sticky top-0 z-50">
+<header class="bg-primary text-white sticky top-0 z-50">
     <div class="desktop-menu hidden container  mx-auto md:flex justify-between items-center p-4">
       <a href="/" class="flex items-center">
         <img src="logos/ngombe.jpg" alt="Ngombe SARL" class="h-12 mr-4">
         <h1 class="text-3xl font-bold">Ngombe SARL</h1>
       </a>
       <nav class="space-x-6">
-        <a href="#services" class="hover:text-blue-300">Services</a>
-        <a href="#contact" class="hover:text-blue-300">À Propos</a>
-        <a href="#contact" class="hover:text-blue-300">Contact</a>
+        <a href="#services" class="hover:text-blue-600">Services</a>
+        <a href="#contact" class="hover:text-blue-600">À Propos</a>
+        <a href="#contact" class="hover:text-blue-600">Contact</a>
       </nav>
     </div>
 
