--- a/src/app/components/our-services/our-services.component.html
+++ b/src/app/components/our-services/our-services.component.html
@@ -21,7 +21,7 @@
 
 <section class="bg-gray-50 py-16">
     <div class="container mx-auto md:px-6 lg:px-20">
-      <h2 class="text-4xl font-bold text-center text-blue-600 mb-12">
+      <h2 class="text-4xl font-bold text-center text-primary mb-12">
         Nos Services
       </h2>
       <p class="text-center text-gray-600 mb-16">
