--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -8,6 +8,7 @@
 <div id="services">
     <app-our-services></app-our-services>
 </div>
-<div id="contact">
-    <app-contact></app-contact>
+<div id="cvtheque">
+    <app-comming-soon></app-comming-soon>
 </div>
+    <app-contact></app-contact>
