--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -32,7 +32,7 @@
 
 <section>
     <section id="ingenierie" class="bg-white py-16">
-        <div class="container mx-auto md:px-6 lg:px-20">
+        <div class="container mx-auto px-2 md:px-6 lg:px-20">
           <h2 class="text-4xl font-bold text-center text-primary mb-4">
             Ingénierie des processus d'affaires
           </h2>
