Dealing with icons strech issue on the enginneering section

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -66,26 +66,27 @@
               </div>
               <ul class="space-y-4">
                 <li class="flex items-start gap-3">
-                  <span class="w-6 h-6 text-white bg-primary rounded-full flex items-center justify-center">✓</span>
+                  <span class="w-6 h-6 text-white bg-primary rounded-full flex items-center justify-center flex-shrink-0">✓</span>
                   <span>Durée : 1 mois gratuit offert</span>
                 </li>
                 <li class="flex items-start gap-3">
-                  <span class="w-6 h-6 text-white bg-primary rounded-full flex items-center justify-center">✓</span>
+                  <span class="w-6 h-6 text-white bg-primary rounded-full flex items-center justify-center flex-shrink-0">✓</span>
                   <span>Prix : par processus</span>
                 </li>
                 <li class="flex items-start gap-3">
-                  <span class="w-6 h-6 text-white bg-primary rounded-full flex items-center justify-center">✓</span>
+                  <span class="w-6 h-6 text-white bg-primary rounded-full flex items-center justify-center flex-shrink-0">✓</span>
                   <span>Attestation de conformité des processus d’affaires délivrée</span>
                 </li>
                 <li class="flex items-start gap-3">
-                  <span class="w-6 h-6 text-white bg-primary rounded-full flex items-center justify-center">✓</span>
+                  <span class="w-6 h-6 text-white bg-primary rounded-full flex items-center justify-center flex-shrink-0">✓</span>
                   <span>Bonus : ajout dans le référentiel mondial des entreprises certifiées</span>
                 </li>
                 <li class="flex items-start gap-3">
-                  <span class="w-6 h-6 text-white bg-primary rounded-full flex items-center justify-center">✓</span>
+                  <span class="w-6 h-6 text-white bg-primary rounded-full flex items-center justify-center flex-shrink-0">✓</span>
                   <span>Préparation à la certification de votre entreprise</span>
                 </li>
               </ul>
+              
       
               <a href="/#contact" class="mt-8 inline-block px-10 py-4 rounded-lg bg-blue-600 text-white font-semibold transition duration-500 hover:bg-blue-700 hover:scale-105 transform">
                 Contactez-nous
