--- a/src/app/components/our-services/our-services.component.html
+++ b/src/app/components/our-services/our-services.component.html
@@ -9,7 +9,7 @@
       <h2 class="text-4xl font-extrabold mb-6">Êtes-vous prêt à transformer votre entreprise ?</h2>
       <p class="text-xl mb-8">Avec <strong>Ngombe Sarl</strong>, ouvrez la porte à de nouvelles opportunités et faites passer votre entreprise au niveau supérieur.</p>
       <a href="https://www.cvtheque.ngombe.org" 
-          class="px-10 py-4 rounded-lg bg-blue-600 text-white font-semibold transition duration-500 hover:bg-blue-700 hover:scale-105 transform">
+          class="flex items center justify-center text-center w-full mx-auto px-10 py-4 rounded-lg bg-blue-600 text-white font-semibold transition duration-500 hover:bg-blue-700 hover:scale-105 transform">
           Commencez dès maintenant
       </a>
     </div>
