updating product engineer section

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -5,12 +5,9 @@
         <h1 class="text-3xl font-bold">Ngombe SARL</h1>
       </a>
       <nav class="space-x-6">
-        <a href="#home" class="hover:text-blue-600">Acceuil</a>
-        <a href="#ingenierie" class="hover:text-blue-600">Ingénierie</a>
-        <a href="#produits" class="hover:text-blue-600">Produits</a>
-        <a href="#services" class="hover:text-blue-600">Services</a>
-        <a href="#about-us" class="hover:text-blue-600">A propos</a>
-        <a href="#contact" class="hover:text-blue-600">Contact</a>
+        @for(link of links; track $index) {
+          <a [href]="'#'+link.anchor" class="font-bold hover:text-blue-600">{{link.name}}</a>
+        }
       </nav>
     </div>
 
@@ -38,12 +35,9 @@
         <img src="logos/ngombe.jpg" alt="logo ngombe" [ngClass]="{'hidden' : !isOpen}" class="w-full h-full rounded-full object-cover">
       </div>
       <nav class="flex flex-col w-full justify-center items-center mt-8 gap-4">
-        <a (click)="toggleSidebar()" href="#home" class="hover:text-blue-300 text-4xl">Acceuil</a>
-        <a (click)="toggleSidebar()" href="#ingenierie" class="hover:text-blue-300 text-4xl">Ingénierie</a>
-        <a (click)="toggleSidebar()" href="#produits" class="hover:text-blue-300 text-4xl">Produits</a>
-        <a (click)="toggleSidebar()" href="#services" class="hover:text-blue-300 text-4xl">Services</a>
-        <a (click)="toggleSidebar()" href="#about-us" class="hover:text-blue-300 text-4xl">A propos</a>
-        <a (click)="toggleSidebar()" href="#contact" class="hover:text-blue-300 text-4xl">Contact</a>
+        @for(link of links; track $index) {
+          <a (click)="toggleSidebar()" [href]="'#'+link.anchor" class="hover:text-blue-300 text-4xl">{{link.name}}</a>
+        }
       </nav>
   </sidebar>
   </header>
