--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -40,7 +40,7 @@
             Découvrez nos solutions complètes pour l'ingénierie des processus d'affaires et la transformation de votre entreprise.
           </p>
           
-          <div class="grid grid-cols-1 lg:grid-cols-2 gap-8 items-center">
+          <div class="grid grid-cols-1 lg:grid-cols-2 gap-8 justify-start items-center">
             <!-- Image Section -->
             <div class="rounded-xl overflow-hidden shadow-lg group">
               <img src="images/ingenierie1.jpg" alt="Ingénierie des processus d'affaires" class="rounded-xl group-hover:scale-110 transition-transform duration-300">
@@ -59,13 +59,18 @@
               </p>  
 
               <div class=" mb-6">
-                <h3 class="text-2xl font-semibold text-gray-800">
-                  Faites vous former,
+                <h3 class="text-2xl font-semibold text-gray-80 p-2 bg-blue-800/30 shadow-lg  backdrop-blur-lg">
+                  Activités à mener
                 </h3>
-                <p>Et beneficiez de ces avantages</p>
               </div>
               <ul class="space-y-4">
-                <li class="flex items-start gap-3">
+                @for(activity of activities; track activity) {
+                  <li class="flex items-start gap-3">
+                    <span class="w-6 h-6 text-white bg-primary rounded-full flex items-center justify-center flex-shrink-0">✓</span>
+                    <span>{{activity.name}}</span>
+                  </li>
+                }
+                <!-- <li class="flex items-start gap-3">
                   <span class="w-6 h-6 text-white bg-primary rounded-full flex items-center justify-center flex-shrink-0">✓</span>
                   <span>Durée : 1 mois gratuit offert</span>
                 </li>
@@ -84,7 +89,7 @@
                 <li class="flex items-start gap-3">
                   <span class="w-6 h-6 text-white bg-primary rounded-full flex items-center justify-center flex-shrink-0">✓</span>
                   <span>Préparation à la certification de votre entreprise</span>
-                </li>
+                </li> -->
               </ul>
               
       
