image optimisation, section order redifining

--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -2,7 +2,7 @@
     <div class="container mx-auto px-6 lg:px-20">
       <!-- Section Header -->
       <div class="text-center mb-12">
-        <h2 class="text-4xl font-bold text-primary uppercase">À propos de nous</h2>
+        <h2 class="text-4xl font-bold text-primary uppercase section_title">À propos de nous</h2>
         <p class="text-gray-600 mt-4">Découvrez notre mission, notre vision et les valeurs qui guident chacune de nos actions.</p>
       </div>
   
@@ -84,7 +84,7 @@
 
 <section id="contact" class="bg-gray-200 py-16">
     <div class="container mx-auto md:px-6 lg:px-20">
-        <h2 class="text-3xl font-extrabold text-center text-gray-800 mb-10">Contactez-Nous</h2>
+        <h2 class="text-4xl font-extrabold text-center text-primary uppercase mb-10 section_title">Contactez-Nous</h2>
         <p class="text-center text-gray-600 mb-16">
             Nous sommes là pour répondre à toutes vos questions et vous accompagner. N'hésitez pas à nous contacter !
         </p>
@@ -155,7 +155,7 @@
     </div>
     <!-- Map Section -->
     <div class="mt-16 w-full flex flex-col items-center font-semibold gap-4">
-        <p class="text-gray-800 text-3xl text-center capitalize">
+        <p class="text-gray-800 text-3xl text-center capitalize section_title">
           Comment nous trouver ?
         </p>
         <iframe 
