--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -33,7 +33,7 @@
 <section>
     <section id="ingenierie" class="bg-white py-16">
         <div class="container mx-auto px-2 md:px-6 lg:px-20">
-          <h2 class="text-4xl font-bold text-center text-primary mb-4">
+          <h2 class="text-4xl font-bold text-center uppercase text-primary mb-4 section_title">
             Ingénierie des processus d'affaires
           </h2>
           <p class="text-center text-gray-600 mb-8">
@@ -59,7 +59,7 @@
               </p>  
 
               <div class=" mb-6">
-                <h3 class="text-2xl font-semibold text-gray-80 p-2 bg-blue-800/30 shadow-lg  backdrop-blur-lg">
+                <h3 class="text-2xl font-semibold text-gray-80 p-2 text-white bg-blue-800/80 shadow-lg  backdrop-blur-lg">
                   Activités à mener
                 </h3>
               </div>
