--- a/src/app/components/service/service.component.html
+++ b/src/app/components/service/service.component.html
@@ -1,42 +1,46 @@
 <div class="md:container md:mx-auto md:p-6 bg-gray-50 min-h-screen">
 <!-- Conditional rendering -->
-  <div *ngIf="service" class="pt-28 md:pt-0">
+  @if(service){
+    <div  class="pt-28 md:pt-0">
     <!-- Title Section -->
-    <div class="text-center mb-6">
-      <h1 class="text-5xl font-extrabold text-gray-900 mb-4">{{ service.title }}</h1>
-      <p class="text-lg text-gray-600">Explorez les details de services que nous proposons</p>
-    </div>
+      <div class="text-center mb-6">
+        <h1 class="text-5xl font-extrabold text-gray-900 mb-4">{{ service.title }}</h1>
+        <p class="text-lg text-gray-600">Explorez les details de services que nous proposons</p>
+      </div>
 
-    <!-- Image Section -->
-    <div class="mb-6 w-full h-[30vh] md:h-[70vh] relative overflow-hidden">
-      <div class="absolute peer top-0 left-0 w-full h-full z-30 opacity-50 bg-gradient-to-r from-gray-500 via-gray-700 to-gray-900 text-white p-8 md:rounded-lg shadow-lg "></div>
-      <img 
-        [src]="service.image" 
-        [alt]="service.title" 
-        class="absolute peer-hover:scale-125 w-full h-full object-cover top-0 left-0 md:rounded-lg shadow-lg border-2 border-gray-200 hover:border-gray-300 transition duration-900 "
-      >
-    </div>
+      <!-- Image Section -->
+      <div class="mb-6 w-full h-[30vh] md:h-[70vh] relative overflow-hidden">
+        <div class="absolute peer top-0 left-0 w-full h-full z-30 opacity-50 bg-gradient-to-r from-gray-500 via-gray-700 to-gray-900 text-white p-8 md:rounded-lg shadow-lg "></div>
+        <img 
+          [src]="service.image" 
+          [alt]="service.title" 
+          class="absolute peer-hover:scale-125 w-full h-full object-cover top-0 left-0 md:rounded-lg shadow-lg border-2 border-gray-200 hover:border-gray-300 transition duration-900 "
+        >
+      </div>
 
-    <!-- Details Section -->
-    <div class="p-6 bg-white shadow-md md:rounded-lg">
-      <h2 class="text-3xl font-semibold text-gray-800 mb-4">Service Details</h2>
-      <p class="text-gray-700 my-4">{{service.description}}</p>
-      <ul class="list-disc pl-6 text-lg text-gray-700 space-y-2">
-        <li *ngFor="let item of service.items">
-          {{ item }}
-        </li>
-      </ul>
+      <!-- Details Section -->
+      <div class="p-6 bg-white shadow-md md:rounded-lg">
+        <h2 class="text-3xl font-semibold text-gray-800 mb-4">Service Details</h2>
+        <p class="text-gray-700 my-4">{{service.description}}</p>
+        <ul class="list-disc pl-6 text-lg text-gray-700 space-y-2">
+          <li *ngFor="let item of service.items">
+            {{ item }}
+          </li>
+        </ul>
+      </div>
     </div>
-  </div>
+  }
 
   <!-- Fallback Content if 'service' is not available -->
-  <div *ngIf="!service" class="text-center text-gray-500 text-lg mt-12">
-    <p>No service selected. Please go back to browse available services.</p>
-    <button 
-      class="mt-4 px-4 py-2 bg-gray-200 text-gray-700 font-medium rounded-lg hover:bg-gray-300 transition duration-300"
-      [routerLink]="['/']"
-    >
-      Back to Services
-    </button>
-  </div>
+  @if(!service){
+    <div  class="text-center text-gray-500 text-lg mt-12">
+      <p>No service selected. Please go back to browse available services.</p>
+      <button 
+        class="mt-4 px-4 py-2 bg-gray-200 text-gray-700 font-medium rounded-lg hover:bg-gray-300 transition duration-300"
+        [routerLink]="['/']"
+      >
+        Back to Services
+      </button>
+    </div>
+  }
 </div>
