--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -11,5 +11,7 @@
 <div id="services">
     <app-our-services></app-our-services>
 </div>
-
-    <app-contact></app-contact>
+<div id="partners">
+    <app-partners></app-partners>
+</div>
+<app-contact></app-contact>
