updated comming-soon section informations

--- a/src/app/components/comming-soon/comming-soon.component.html
+++ b/src/app/components/comming-soon/comming-soon.component.html
@@ -1,49 +1,54 @@
 <section id="produits" class="py-20 px-4 bg-gradient-to-r from-[#002D5B] to-[#006699] text-white relative overflow-hidden">
     <!-- Background Image with Overlay -->
-    <div class="absolute top-0 left-0 w-full h-full bg-cover bg-center filter blur-sm z-0" 
+    <div class="absolute top-0 left-0 z-0 w-full h-full bg-center bg-cover filter blur-sm" 
          style="background: linear-gradient(to right, rgba(0, 45, 91, 0.7), rgba(0, 102, 153, 0.7)), url('images/cvtheque_screen.png');">
     </div>
   
-    <div class="max-w-7xl mx-auto text-center relative z-10 mt-5">
-        <h1 class="text-6xl">CVTHEQUE</h1>
-      <h2 class="text-2xl font-bold mb-8 text-white">Découvrez Notre Solution Complète <span class="text-4xl">4</span> en <span class="4xl">1</span></h2>
-      <p class="text-xl mb-6">Avec <strong>la cvthèque </strong>de <strong>Ngombe Sarl</strong>, bénéficiez de solutions avancées pour améliorer la gestion et l’optimisation de vos processus métier.</p>
-      <p class="text-lg mb-12">Nos services sont conçus pour répondre à vos besoins en ingénierie des processus :</p>
+    <div class="relative z-10 mx-auto mt-5 text-center max-w-7xl">
+        <h1 class="my-2 text-6xl sirh_title">SIRH <span class="text-primary">NGOMBE</span></h1>
+      <h2 class="mb-8 text-2xl font-bold text-white">Découvrez Notre Solution Complète <span class="text-4xl">4</span> en <span class="4xl">1</span></h2>
+      <p class="mb-6 text-xl">Avec le <strong>SIRH NGOMBE</strong>, vous bénéficiez d'une solution  avancée pour ameliorer la gestion
+      et l'optimisation de vos processs métiers RH.</p>
+      <p class="mb-12 text-lg"><strong>SIRH NGOMBE</strong> est une solution evolutive, adaptative et interactive developpée dans le but de fluidifier et de dématérialiser chaque processus d'administration du capital humain</p>
   
       <!-- Products Grid -->
       <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-8 mb-12 text-[#002D5B]">
         <!-- Product 1 -->
-        <div class="bg-white p-6 rounded-lg shadow-lg transform transition duration-500 hover:scale-105 hover:shadow-xl">
+        <div class="p-6 transition duration-500 transform bg-white rounded-lg shadow-lg hover:scale-105 hover:shadow-xl">
           <fa-icon class="text-4xl text-primary" [icon]="faDatabase"></fa-icon>
-          <h3 class="text-2xl font-semibold mb-4">CVthèque</h3>
+          <h3 class="mb-4 text-2xl font-semibold">CVthèque</h3>
           <p>Accédez à une base de données dynamique et fiable pour mettre en relation les bons profils avec les bonnes opportunités.</p>
         </div>
         
         <!-- Product 2 -->
-        <div class="bg-white p-6 rounded-lg shadow-lg transform transition duration-500 hover:scale-105 hover:shadow-xl">
+        <div class="p-6 transition duration-500 transform bg-white rounded-lg shadow-lg hover:scale-105 hover:shadow-xl">
           <fa-icon class="text-4xl text-primary" [icon]="faBriefCase"></fa-icon>
-          <h3 class="text-2xl font-semibold mb-4">Job Seeking</h3>
+          <h3 class="mb-4 text-2xl font-semibold">Employment opportunities</h3>
           <p>Trouvez des opportunités d’emploi adaptées à vos compétences grâce à notre plateforme dédiée.</p>
         </div>
         
         <!-- Product 3 -->
-        <div class="bg-white p-6 rounded-lg shadow-lg transform transition duration-500 hover:scale-105 hover:shadow-xl">
+        <div class="p-6 transition duration-500 transform bg-white rounded-lg shadow-lg hover:scale-105 hover:shadow-xl">
           <fa-icon class="text-4xl text-primary" [icon]="faUserPlus"></fa-icon>
-          <h3 class="text-2xl font-semibold mb-4">Onboarding</h3>
+          <h3 class="mb-4 text-2xl font-semibold">Integration</h3>
           <p>Optimisez l’intégration de vos collaborateurs avec des processus fluides et bien structurés.</p>
         </div>
         
         <!-- Product 4 -->
-        <div class="bg-white p-6 rounded-lg shadow-lg transform transition duration-500 hover:scale-105 hover:shadow-xl">
+        <div class="p-6 transition duration-500 transform bg-white rounded-lg shadow-lg hover:scale-105 hover:shadow-xl">
           <fa-icon class="text-4xl text-primary" [icon]="faFileAlt"></fa-icon>
-          <h3 class="text-2xl font-semibold mb-4">CV Builder</h3>
+          <h3 class="mb-4 text-2xl font-semibold">CV Maker</h3>
           <p>Créez et personnalisez des CV professionnels avec notre outil en ligne simple et rapide.</p>
         </div>
       </div>
   
-      <p class="text-lg mb-6">Prêt à découvrir et utiliser nos solutions ? Accédez-y dès maintenant !</p>
-      <a href="https://www.cvtheque.ngombe.org" 
-         class="bg-primary text-white py-3 px-6 rounded-lg font-semibold hover:bg-blue-800 transition duration-300">
+      <p class="mb-6 text-lg">Prêt à découvrir et utiliser nos solutions ? Accédez-y dès maintenant !</p>
+      <!-- <a href="https://www.cvtheque.ngombe.org" 
+         class="px-6 py-3 font-semibold text-white transition duration-300 rounded-lg bg-primary hover:bg-blue-800">
+        Accéder aux Services
+      </a> -->
+      <a href="#contact" 
+         class="px-6 py-3 font-semibold text-white transition duration-300 rounded-lg bg-primary hover:bg-blue-800">
         Accéder aux Services
       </a>
     </div>
