--- a/src/app/components/comming-soon/comming-soon.component.html
+++ b/src/app/components/comming-soon/comming-soon.component.html
@@ -7,39 +7,20 @@
     <div class="relative z-10 mx-auto mt-5 text-center max-w-7xl">
         <h1 class="my-2 text-6xl sirh_title">SIRH <span class="text-primary">NGOMBE</span></h1>
       <h2 class="mb-8 text-2xl font-bold text-white">Découvrez Notre Solution Complète <span class="text-4xl">4</span> en <span class="4xl">1</span></h2>
-      <p class="mb-6 text-xl">Avec le <strong>SIRH NGOMBE</strong>, vous bénéficiez d'une solution  avancée pour ameliorer la gestion
-      et l'optimisation de vos processs métiers RH.</p>
-      <p class="mb-12 text-lg"><strong>SIRH NGOMBE</strong> est une solution evolutive, adaptative et interactive developpée dans le but de fluidifier et de dématérialiser chaque processus d'administration du capital humain</p>
+      <p class="mb-4 text-xl">Avec le <strong class="font-bold">SIRH NGOMBE</strong>, vous bénéficiez d'une solution  avancée pour ameliorer la gestion
+      et l'optimisation de vos processus métiers RH.</p>
+      <p class="mb-12 text-lg">Le<strong>SIRH NGOMBE</strong> est une solution évolutive, adaptative et interactive développée dans le but de fluidifier et de dématérialiser chaque processus d'administration du capital humain.</p>
   
       <!-- Products Grid -->
       <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-8 mb-12 text-[#002D5B]">
         <!-- Product 1 -->
-        <div class="p-6 transition duration-500 transform bg-white rounded-lg shadow-lg hover:scale-105 hover:shadow-xl">
-          <fa-icon class="text-4xl text-primary" [icon]="faDatabase"></fa-icon>
-          <h3 class="mb-4 text-2xl font-semibold">CVthèque</h3>
-          <p>Accédez à une base de données dynamique et fiable pour mettre en relation les bons profils avec les bonnes opportunités.</p>
-        </div>
-        
-        <!-- Product 2 -->
-        <div class="p-6 transition duration-500 transform bg-white rounded-lg shadow-lg hover:scale-105 hover:shadow-xl">
-          <fa-icon class="text-4xl text-primary" [icon]="faBriefCase"></fa-icon>
-          <h3 class="mb-4 text-2xl font-semibold">Employment opportunities</h3>
-          <p>Trouvez des opportunités d’emploi adaptées à vos compétences grâce à notre plateforme dédiée.</p>
-        </div>
-        
-        <!-- Product 3 -->
-        <div class="p-6 transition duration-500 transform bg-white rounded-lg shadow-lg hover:scale-105 hover:shadow-xl">
-          <fa-icon class="text-4xl text-primary" [icon]="faUserPlus"></fa-icon>
-          <h3 class="mb-4 text-2xl font-semibold">Integration</h3>
-          <p>Optimisez l’intégration de vos collaborateurs avec des processus fluides et bien structurés.</p>
-        </div>
-        
-        <!-- Product 4 -->
-        <div class="p-6 transition duration-500 transform bg-white rounded-lg shadow-lg hover:scale-105 hover:shadow-xl">
-          <fa-icon class="text-4xl text-primary" [icon]="faFileAlt"></fa-icon>
-          <h3 class="mb-4 text-2xl font-semibold">CV Maker</h3>
-          <p>Créez et personnalisez des CV professionnels avec notre outil en ligne simple et rapide.</p>
-        </div>
+        @for(feature of features; track feature.id) {
+          <div class="p-6 transition duration-500 transform bg-white rounded-lg shadow-lg hover:scale-105 hover:shadow-xl">
+            <fa-icon class="text-4xl text-primary" [icon]="feature.icon"></fa-icon>
+            <h3 class="mb-4 text-2xl font-semibold">{{feature.title}}</h3>
+            <p>{{feature.description}}</p>
+          </div>
+        }
       </div>
   
       <p class="mb-6 text-lg">Prêt à découvrir et utiliser nos solutions ? Accédez-y dès maintenant !</p>
